# substitution-cipher

./: README.md  cipher_transformer.hpp
src/: cipher_transformer.hpp  english_preprocessor.hpp  ngram_scorer.hpp
test/: CMakeLists.txt  test_cipher.cpp
test-cipher/: CMakeLists.txt
text/: plain_john.txt  plain_lingvo.txt
